JSVM_8_0_1 : memory leaks fixes + vc8 .sln and proj + modification of the long-term interlaced validation scripts

--- a/JSVM/H264Extension/data/fixedQpEncoder.cfg
+++ b/JSVM/H264Extension/data/fixedQpEncoder.cfg
@@ -1,30 +1,52 @@
 ########### RATE-POINTS CONFIGURATION FILE ###########
 
-test                                                  # Label
-..\..\..\..\..\bin\H264AVCEncoderLibTestStatic.exe    # Encoder Binary
-..\..\..\data\encoder.cfg                             # Parameter File
-test.264                                              # Bit Stream File
-.                                                     # Motion File Folder
+BUS                                                   # Label
+bin\H264AVCEncoderLibTestStatic.exe                   # Encoder Binary
+bin\PSNRStatic.exe                                    # PSNR Binary
+cfg\352_288_30.cfg                                    # Parameter File
+str\BUS.264                                           # Bit Stream File
+mot                                                   # Motion File Folder
+fgs                                                   # FGS File Folder
 150                                                   # Number Of Frames
+16                                                    # GOP Size
+-1                                                    # Intra Period
 30.0                                                  # Frames Per Second
 2                                                     # Number Of Layers
 1                                                     # constrained intra for base layer (single-loop decoding)
+10                                                    # Number Of Iterations
+1                                                     # Mode (0:Rate, 1:PSNR)
 
 
 ---------- LAYER 0 ----------
-64.00                                                 # Bit rate [kbit/s]
+176                                                   # Input Width
+144                                                   # Input Height
+org\BUS_176x144_15.yuv                                # Input File
+tmp\BUS_layer0.yuv                                    # Reconstructed File
+30.00                                                 # Lowest Bit rate [kbit/s] / Lowest PSNR [dB]
+0                                                     # Number Of FGS Layers
+0                                                     # FGS Motion Refinement Mode
+128.00                                                # Highest Bit rate [kbit/s]
 2.00                                                  # Maximum Negative Mismatch [%]
 1.00                                                  # Maximum Positive Mismatch [%]
-36.2                                                  # Start QP
+32.00                                                 # StartBaseQpResidual
+32.00                                                 # StartQpModeDecision
+0                                                     # Entropy Coding Mode Flag (0: CAVLC, 1:CABAC)
+0                                                     # Inter-Layer Prediction Mode
+-1                                                    # Base Layer Id
 
 ---------- LAYER 1 ----------
-96.00                                                # Bit rate [kbit/s]
-1.00                                                  # Maximum Negative Mismatch [%]
+352                                                   # Input Width
+288                                                   # Input Height
+org\BUS_352x288_30.yuv                                # Input File
+tmp\BUS_layer1.yuv                                    # Reconstructed File
+30.00                                                 # Lowest Bit rate [kbit/s] / Lowest PSNR [dB]
+0                                                     # Number Of FGS Layers
+0                                                     # FGS Motion Refinement Mode
+1024.00                                               # Highest Bit rate [kbit/s]
+2.00                                                  # Maximum Negative Mismatch [%]
 1.00                                                  # Maximum Positive Mismatch [%]
-34.8                                                  # Start QP
-
----------- LAYER 2 ----------
-192.00                                               # Bit rate [kbit/s]
-1.00                                                  # Maximum Negative Mismatch [%]
-1.00                                                  # Maximum Positive Mismatch [%]
-41.0                                                  # Start QP
+32.00                                                 # StartBaseQpResidual
+32.00                                                 # StartQpModeDecision
+1                                                     # Entropy Coding Mode Flag (0: CAVLC, 1:CABAC)
+2                                                     # Inter-Layer Prediction Mode
+0                                                     # Base Layer Id
