--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -4,7 +4,7 @@
 OutputFile              test.264               # Bitstream file
 FrameRate               15                     # Maximum frame rate [Hz]
 MaxDelay                1200.0                 # Maximum structural delay [ms]
-FramesToBeEncoded       5                      # Number of frames (at input frame rate)
+FramesToBeEncoded       13                     # Number of frames (at input frame rate)
 CgsSnrRefinement        0                      # (0:SNR layers as CGS, 1:SNR layers as MGS)
 
 #============================== MCTF ==============================
@@ -30,10 +30,18 @@ LoopFilterAlphaC0Offset 0                      # AlphaOffset(-6..+6): valid rang
 LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid range
 
 #============================== LAYER DEFINITION ==============================
-NumLayers               1                        # Number of layers
+NumLayers               3                        # Number of layers
 LayerCfg                ..\..\..\data\layer0.cfg # Layer configuration file
+LayerCfg                ..\..\..\data\layer1.cfg # Layer configuration file
+LayerCfg                ..\..\..\data\layer2.cfg # Layer configuration file
 
 SuffixUnitEnable        1                      # Add suffix unit (0: off, 1: on) shall always be on in SVC contexts (i.e. when there are FGS/CGS/spatial enhancement layers)
 MMCOBaseEnable          1                      # MMCO for base representation (0: off, 1: on)
 TLNestingFlag           0                      # Sets the temporal level nesting flag (0: off, 1: on)
 TLPicIdxEnable          0                      # Add picture index for the lowest temporal level (0: off, 1: on)
+
+#============================== RCDO =====================================
+RCDOBlockSizes			1						# restrict block sizes for MC (0:off, 1:in EL, 2:in all layers)
+RCDOMotionCompensationY	1						# simplified MC for luma      (0:off, 1:in EL, 2:in all layers)
+RCDOMotionCompensationC	1						# simplified MC for chroma    (0:off, 1:in EL, 2:in all layers)
+RCDODeblocking			1						# simplified deblocking       (0:off, 1:in EL, 2:in all layers)
