--- a/JSVM/H264Extension/data/layer0.cfg
+++ b/JSVM/H264Extension/data/layer0.cfg
@@ -5,17 +5,17 @@ SourceWidth     176                     # Input  frame width
 SourceHeight    144                     # Input  frame height
 FrameRateIn     15                      # Input  frame rate [Hz]
 FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       E:\TestSequences\SVC\MOBILE_QCIF15.yuv       # Input  file
+InputFile       \\bslinux2\data\svc\SOCCER_QCIF15.yuv       # Input  file
 ReconFile       rec_layer0.yuv          # Reconstructed file
 SymbolMode      1                       # 0=CAVLC, 1=CABAC
 
 #============================== CODING ==============================
-ClosedLoop      2                       # Closed-loop control (0,1:at H rate, 2: at L+H rate)
-FRExt           1                       # FREXT mode (0:off, 1:on)
-MaxDeltaQP      1                       # Max. absolute delta QP
+ClosedLoop      1                       # Closed-loop control (0,1:at H rate, 2: at L+H rate)
+FRExt           0                       # FREXT mode (0:off, 1:on)
+MaxDeltaQP      0                       # Max. absolute delta QP
 QP              35.0                    # Quantization parameters
 NumFGSLayers    2                       # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
-FGSMotion       0                       # motion refinement in FGS layers (0:off, 1:on)
+FGSMotion       1                       # motion refinement in FGS layers (0:off, 1:on)
 
 #============================== CONTROL ==============================
 MeQP0           34.00                   # QP for motion estimation / mode decision (stage 0)
@@ -27,9 +27,3 @@ MeQP5           34.00                   # QP for motion estimation / mode decisi
 
 InterLayerPred  0                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
 BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
-
-FGSVectorMode  	1
-FGSVector0	    1
-FGSVector1	    3
-FGSVector2	    12
-
