--- a/JSVM/H264Extension/data/layer2.cfg
+++ b/JSVM/H264Extension/data/layer2.cfg
@@ -5,7 +5,7 @@ SourceWidth     352                     # Input  frame width
 SourceHeight    288                     # Input  frame height
 FrameRateIn     15                      # Input  frame rate [Hz]
 FrameRateOut    15                      # Output frame rate [Hz]
-InputFile       ..\..\..\..\..\SVC\MOBILE_CIF15.yuv # Input  file
+InputFile       \\bslinux2\data\svc\SOCCER_CIF15.yuv       # Input  file
 ReconFile       rec_layer2.yuv          # Reconstructed file
 SymbolMode      1                       # 0=CAVLC, 1=CABAC
 
@@ -13,17 +13,17 @@ SymbolMode      1                       # 0=CAVLC, 1=CABAC
 ClosedLoop      1                       # Closed-loop control (0,1:at H rate, 2: at L+H rate)
 FRExt           0                       # FREXT mode (0:off, 1:on)
 MaxDeltaQP      0                       # Max. absolute delta QP
-QP              36.0                    # Quantization parameters
-NumFGSLayers    2                       # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
-FGSMotion       1                       # motion refinement in FGS layers (0:off, 1:on)
+QP              35.0                    # Quantization parameters
+NumFGSLayers    0                       # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
+FGSMotion       0                       # motion refinement in FGS layers (0:off, 1:on)
 
 #============================== CONTROL ==============================
-MeQP0           36.00                   # QP for motion estimation / mode decision (stage 0)
-MeQP1           36.00                   # QP for motion estimation / mode decision (stage 1)
-MeQP2           36.00                   # QP for motion estimation / mode decision (stage 2)
-MeQP3           36.00                   # QP for motion estimation / mode decision (stage 3)
-MeQP4           36.00                   # QP for motion estimation / mode decision (stage 4)
-MeQP5           36.00                   # QP for motion estimation / mode decision (stage 5)
+MeQP0           34.00                   # QP for motion estimation / mode decision (stage 0)
+MeQP1           34.00                   # QP for motion estimation / mode decision (stage 1)
+MeQP2           34.00                   # QP for motion estimation / mode decision (stage 2)
+MeQP3           34.00                   # QP for motion estimation / mode decision (stage 3)
+MeQP4           34.00                   # QP for motion estimation / mode decision (stage 4)
+MeQP5           34.00                   # QP for motion estimation / mode decision (stage 5)
 
 InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
 BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
