--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -4,25 +4,30 @@
 OutputFile              test.264               # Bitstream file
 FrameRate               15                     # Maximum frame rate [Hz]
 MaxDelay                1200.0                 # Maximum structural delay [ms]
-FramesToBeEncoded       13                     # Number of frames (at input frame rate)
-CgsSnrRefinement        0                      # (0:SNR layers as CGS, 1:SNR layers as MGS)
+FramesToBeEncoded       20                     # Number of frames (at input frame rate)
+
+CgsSnrRefinement        1                      # (0:SNR layers as CGS, 1:SNR layers as MGS)
+EncodeKeyPictures		1					   # key pictures at temp. level 0 [0:FGS only, 1:FGS&MGS, 2:always(useless)]
+MGSControl              1                      # (0:ME+MC using current layer, 1:ME using EL ref. pics, 2:ME+MC using EL ref. pics)
+MGSKeyPicMotRef         1                      # motion refinement for MGS key pics (0:off, 1:one)
 
 #============================== MCTF ==============================
 GOPSize                 4                      # GOP Size (at maximum frame rate)
 IntraPeriod             -1                     # Intra Period
 NumberReferenceFrames   1                      # Number of reference pictures
-BaseLayerMode           2                      # Base layer mode (0:AVC w large DPB,
+BaseLayerMode           1                      # Base layer mode (0:AVC w large DPB,
                                                #   1:AVC compatible, 2:AVC w subseq SEI)
 
 #============================== MOTION SEARCH ==============================
 SearchMode              4                      # Search mode (0:BlockSearch, 4:FastSearch)
-SearchFuncFullPel       3                      # Search function full pel
+SearchFuncFullPel       0                      # Search function full pel
                                                #   (0:SAD, 1:SSE, 2:HADAMARD, 3:SAD-YUV) 
-SearchFuncSubPel        2                      # Search function sub pel
+SearchFuncSubPel        0                      # Search function sub pel
                                                #   (0:SAD, 1:SSE, 2:HADAMARD) 
-SearchRange             32                     # Search range (Full Pel)
-BiPredIter              4                      # Max iterations for bi-pred search
-IterSearchRange         8                      # Search range for iterations (0: normal)
+SearchRange             16                     # Search range (Full Pel)
+BiPredIter              2                      # Max iterations for bi-pred search
+IterSearchRange         2                      # Search range for iterations (0: normal)
+
 #============================== LOOP FILTER ==============================
 LoopFilterDisable       0                      # Loop filter idc (0: on, 1: off, 2:
                                                #   on except for slice boundaries)
@@ -30,10 +35,15 @@ LoopFilterAlphaC0Offset 0                      # AlphaOffset(-6..+6): valid rang
 LoopFilterBetaOffset    0                      # BetaOffset (-6..+6): valid range
 
 #============================== LAYER DEFINITION ==============================
-NumLayers               3                        # Number of layers
-LayerCfg                ..\..\..\data\layer0.cfg # Layer configuration file
-LayerCfg                ..\..\..\data\layer1.cfg # Layer configuration file
-LayerCfg                ..\..\..\data\layer2.cfg # Layer configuration file
+NumLayers               2                        # Number of layers
+#LayerCfg                ..\..\..\data\layer0.cfg # Layer configuration file
+#LayerCfg                ..\..\..\data\layer1.cfg # Layer configuration file
+#LayerCfg                ..\..\..\data\layer2.cfg # Layer configuration file
+#LayerCfg                ..\..\..\data\layer3.cfg # Layer configuration file
+#LayerCfg                ..\..\..\data\layer4.cfg # Layer configuration file
+LayerCfg                ..\..\..\data\layer5.cfg # Layer configuration file
+LayerCfg                ..\..\..\data\layer6.cfg # Layer configuration file
+#LayerCfg                ..\..\..\data\layer7.cfg # Layer configuration file
 
 SuffixUnitEnable        1                      # Add suffix unit (0: off, 1: on) shall always be on in SVC contexts (i.e. when there are FGS/CGS/spatial enhancement layers)
 MMCOBaseEnable          1                      # MMCO for base representation (0: off, 1: on)
