--- a/JSVM/H264Extension/data/layer3.cfg
+++ b/JSVM/H264Extension/data/layer3.cfg
@@ -3,29 +3,27 @@
 #============================== INPUT / OUTPUT ==============================
 SourceWidth     352                     # Input  frame width
 SourceHeight    288                     # Input  frame height
-FrameRateIn     30                      # Input  frame rate [Hz]
-FrameRateOut    30                      # Output frame rate [Hz]
-InputFile       ..\..\..\..\..\SVC\City_CIF30.yuv # Input  file
+FrameRateIn     15                      # Input  frame rate [Hz]
+FrameRateOut    15                      # Output frame rate [Hz]
+InputFile       \\bslinux2\data\svc\SOCCER_CIF15.yuv       # Input  file
 ReconFile       rec_layer3.yuv          # Reconstructed file
 SymbolMode      1                       # 0=CAVLC, 1=CABAC
 
 #============================== CODING ==============================
 ClosedLoop      1                       # Closed-loop control (0,1:at H rate, 2: at L+H rate)
-FRExt           1                       # FREXT mode (0:off, 1:on)
+FRExt           0                       # FREXT mode (0:off, 1:on)
 MaxDeltaQP      0                       # Max. absolute delta QP
-QP              30.0                    # Quantization parameters
+QP              35.0                    # Quantization parameters
 NumFGSLayers    0                       # Number of FGS layers ( 1 layer - ~ delta QP = 6 )
+FGSMotion       0                       # motion refinement in FGS layers (0:off, 1:on)
 
 #============================== CONTROL ==============================
-MeQP0           30.00                   # QP for motion estimation / mode decision (stage 0)
-MeQP1           30.00                   # QP for motion estimation / mode decision (stage 1)
-MeQP2           30.00                   # QP for motion estimation / mode decision (stage 2)
-MeQP3           30.00                   # QP for motion estimation / mode decision (stage 3)
-MeQP4           30.00                   # QP for motion estimation / mode decision (stage 4)
-MeQP5           30.00                   # QP for motion estimation / mode decision (stage 5)
+MeQP0           34.00                   # QP for motion estimation / mode decision (stage 0)
+MeQP1           34.00                   # QP for motion estimation / mode decision (stage 1)
+MeQP2           34.00                   # QP for motion estimation / mode decision (stage 2)
+MeQP3           34.00                   # QP for motion estimation / mode decision (stage 3)
+MeQP4           34.00                   # QP for motion estimation / mode decision (stage 4)
+MeQP5           34.00                   # QP for motion estimation / mode decision (stage 5)
 
 InterLayerPred  2                       # Inter-layer Prediction (0: no, 1: yes, 2:adaptive)
 BaseQuality     3                       # Base quality level (0, 1, 2, 3) (0: no, 3, all) 
-DecodeLoops     0                       # Decoding loops (0:single, 1:mult for LP, 2:multiple)
-
-MotionInfoMode  0                       # Motion Info Mode (0:no, 1:load, 2:save )
