JVT-V074, JVT-V090, bug fixes

--- a/Validation/SimuDataBase/Short_term/MVC/cfg/MVC.cfg
+++ b/Validation/SimuDataBase/Short_term/MVC/cfg/MVC.cfg
@@ -2,7 +2,7 @@
 
 
 #====================== GENERAL ================================
-MVCMode                   1           # must be one for MVC simulations
+AVCMode                   1           # must be one for MVC simulations
 InputFile     orig/MVC_176x144_30.yuv # input  file
 OutputFile    str/MVC.264             # bitstream file
 ReconFile     tmp/MVC_rec_L0.yuv      # reconstructed file
