JSVM_8_9 : High-level syntax (prefix NAL unit)

--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -45,7 +45,7 @@ LayerCfg                ..\..\..\data\layer5.cfg # Layer configuration file
 LayerCfg                ..\..\..\data\layer6.cfg # Layer configuration file
 #LayerCfg                ..\..\..\data\layer7.cfg # Layer configuration file
 
-SuffixUnitEnable        1                      # Add suffix unit (0: off, 1: on) shall always be on in SVC contexts (i.e. when there are FGS/CGS/spatial enhancement layers)
+PreAndSuffixUnitEnable        1                      # Add prefix and suffix unit (0: off, 1: on) shall always be on in SVC contexts (i.e. when there are FGS/CGS/spatial enhancement layers)
 MMCOBaseEnable          1                      # MMCO for base representation (0: off, 1: on)
 TLNestingFlag           0                      # Sets the temporal level nesting flag (0: off, 1: on)
 TLPicIdxEnable          0                      # Add picture index for the lowest temporal level (0: off, 1: on)
