JVT-V068 (Thomson) HRD and SEI message

--- a/JSVM/H264Extension/data/encoder.cfg
+++ b/JSVM/H264Extension/data/encoder.cfg
@@ -55,3 +55,7 @@ RCDOBlockSizes			1						# restrict block sizes for MC (0:off, 1:in EL, 2:in all 
 RCDOMotionCompensationY	1						# simplified MC for luma      (0:off, 1:in EL, 2:in all layers)
 RCDOMotionCompensationC	1						# simplified MC for chroma    (0:off, 1:in EL, 2:in all layers)
 RCDODeblocking			1						# simplified deblocking       (0:off, 1:in EL, 2:in all layers)
+
+#=============================== HRD =====================================
+EnableNalHRD            0
+EnableVclHRD            0
